alle tekst altijd left-aligned en padding van de divs met tekst aangepast

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
         <!-- Challenge Row-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for GIF -->
-            <div class="col-12 col-md-5">
+            <div class="col-12 col-md-5 avatarGIF">
               <img src="htmlvideos/welcome.gif" class="img-fluid" alt="Avatar signing 'HELLO. THIS WEBSITE OF SIGNLAB AMSTERDAM. WELCOME'">
             </div>
             <!-- Column for info -->
             <div class="col-12 col-md">
-                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
+                <div class="project-text pb-1 w-100 my-auto text-left textDIV">
                     <h5>Sign language: Linguistic structure made visible</h5>
                     <p class="mb-4">
                       Investigating sign languages has the potential to yield important linguistic insights which are much more difficult to obtain by investigating spoken languages alone, because linguistic structures are sometimes much easier to detect in sign languages than in spoken languages. Quite literally, sign languages often make linguistic structure <b><a href="https://doi.org/10.1515/tl-2018-0012" target="_blank">directly visible</a></b>.
