--- a/people.html
+++ b/people.html
@@ -68,13 +68,13 @@
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
              <!-- Column for GIF -->
-             <div class="col-12 col-md-5">
+             <div class="col-12 col-md-5 avatarGIF">
               <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'">
             </div>
             <!-- Column for team -->
-            <div class="col-12 col-md">
+            <div class="col-12 col-md ">
                 <!-- Team -->
-                <div class="project-text text-center text-lg-left no-top-padding">
+                <div class="project-text text-left textDIV">
                     <h5>Principal investigator</h5>
                     <p class="text-black-50 mb-3">
                       <a href="https://www.florisroelofsen.com/" target="_blank">
