--- a/html/funding.html
+++ b/html/funding.html
@@ -50,7 +50,7 @@
 <body id="page-top">
    <!-- onload="CWASA.init();"> -->
 
-<div id="page-container">
+<div id="page-container" class="bg-light">
 <div id="content-wrap">
 <!--================================================================-->
 
@@ -82,7 +82,7 @@
 
 </div>
 <!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam <br><i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
+<footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam &emsp;&emsp;&emsp;&emsp;&emsp; <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
 
 
 <!-- Javascripts -->
