--- a/html/resources.html
+++ b/html/resources.html
@@ -49,7 +49,7 @@
 
 <body id="page-top" onload="CWASA.init();">
 
-<div id="page-container">
+<div id="page-container" class="bg-light">
 <div id="content-wrap">
 <!--================================================================-->
 
@@ -88,7 +88,7 @@
 
 </div>
 <!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam <br><i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
+<footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam &emsp;&emsp;&emsp;&emsp;&emsp;<i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
 
 
 <!-- Javascripts -->
