--- a/projects.html
+++ b/projects.html
@@ -48,8 +48,7 @@
 
 
 <body id="page-top">
-åß
-<div id="page-container">
+<div id="page-container" class="bg-light">
 <div id="content-wrap">
 <!--================================================================-->
 
@@ -89,12 +88,16 @@
           </div>
         </div>
     </div>
+
+
 </section>
 
-</div>
-<!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam <br><i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
 
+    <!-- Footer-->
+    <footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam &emsp;&emsp;&emsp;&emsp;&emsp; <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
+
+
+</div>
 
 <!-- Javascripts -->
 
