--- a/publications.html
+++ b/publications.html
@@ -48,9 +48,8 @@
 
 
 <body id="page-top" >
-   onload="CWASA.init();">
 
-<div id="page-container">
+<div id="page-container" class="bg-light">
 <div id="content-wrap">
 <!--================================================================-->
 
@@ -189,13 +188,14 @@
 
 </div>
 
+
+
 </section>
+<!-- Footer-->
+<footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam &emsp;&emsp;&emsp;&emsp;&emsp; <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
 
 
 </div>
-<!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam <br><i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
-
 
 <!-- Javascripts -->
 
