--- a/translator.html
+++ b/translator.html
@@ -47,7 +47,7 @@
 
 <body id="page-top" onload="CWASA.init();">
 
-<div id="page-container">
+<div id="page-container" class="bg-light">
 <div id="content-wrap">
 <!--================================================================-->
 
@@ -183,14 +183,18 @@
         <div class="SToCA" tyle="text-align: center;"></div>
         <!--================================================================-->
     </div>
+
+
 </section>
 
 <!--================================================================-->
 
 
+    <!-- Footer-->
+    <footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam &emsp;&emsp;&emsp;&emsp;&emsp; <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
+
 </div>
-<!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam <br><i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
+
 
 
 <!-- Javascripts -->
