footer nu echt goed

--- a/html/funding.html
+++ b/html/funding.html
@@ -80,10 +80,16 @@
 
 <!--================================================================-->
 
-</div>
 <!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam &emsp;&emsp;&emsp;&emsp;&emsp; <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
+<footer class="footer bg-white small text-center text-black-50">
+  <div style="line-height:150%;">
+    <br>&copy;2020 SignLab Amsterdam
+    <br>
+    <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com
+  </div>
+</footer>
 
+</div>
 
 <!-- Javascripts -->
 
