--- a/people.html
+++ b/people.html
@@ -127,8 +127,14 @@
 </section>
 
 
-    <!-- Footer-->
-    <footer class="footer bg-white small text-center text-black-50">&copy;2020 SignLab Amsterdam &emsp;&emsp;&emsp;&emsp;&emsp; <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com</footer>
+<!-- Footer-->
+<footer class="footer bg-white small text-center text-black-50">
+  <div style="line-height:150%;">
+    <br>&copy;2020 SignLab Amsterdam
+    <br>
+    <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com
+  </div>
+</footer>
 
 
 </div>
