test margin people en welkom gif rechts

--- a/people.html
+++ b/people.html
@@ -67,8 +67,12 @@
     <div class="container-fluid">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+          <!-- Column for margin -->
+          <div class="col-12 col-md-2">
+         </div>
+
             <!-- Column for team -->
-            <div class="col-12 col-md ">
+            <div class="col-12 col-md-3 ">
                 <!-- Team -->
                 <div class="project-text text-left textDIV">
                     <h5>Principal investigator</h5>
