--- a/people.html
+++ b/people.html
@@ -67,14 +67,11 @@
     <div class="container-fluid">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-          <!-- Column for margin -->
-          <div class="col-12 col-md-2">
-         </div>
 
             <!-- Column for team -->
             <div class="col-12 col-md-3 ">
                 <!-- Team -->
-                <div class="project-text text-left textDIV">
+                <div class="project-text text-left peopletextDIV">
                     <h5>Principal investigator</h5>
                     <p class="text-black-50 mb-3">
                       <a href="https://www.florisroelofsen.com/" target="_blank">
