test margin new column

--- a/people.html
+++ b/people.html
@@ -68,10 +68,20 @@
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
+          <!-- Column for margin -->
+          <div class="col-0 col-md-1">
+         </div>
+         <!-- Column for margin -->
+         <div class="col-0 col-md-1">
+        </div>
+        <!-- Column for margin -->
+        <div class="col-0 col-md-1">
+       </div>
+
             <!-- Column for team -->
-            <div class="col-12 col-md">
+            <div class="col-12 col-md-2">
                 <!-- Team -->
-                <div class="project-text text-left peopletextDIV">
+                <div class="project-text text-left textDIV">
                     <h5>Principal investigator</h5>
                     <p class="text-black-50 mb-3">
                       <a href="https://www.florisroelofsen.com/" target="_blank">
