margins nu mooier, avatar gif boven op mobiel

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
             <!-- Column for info -->
-            <div class="col-12 col-md">
+            <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left textDIV">
                     <h5>Sign language: Linguistic structure made visible</h5>
                     <p class="mb-4">
@@ -89,7 +89,7 @@
             </div>
 
             <!-- Column for GIF -->
-            <div class="col-12 col-md-5 avatarGIF">
+            <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
               <img src="htmlvideos/welcome.gif" class="img-fluid" alt="Avatar signing 'HELLO. THIS WEBSITE OF SIGNLAB AMSTERDAM. WELCOME'">
             </div>
           </div>
