--- a/people.html
+++ b/people.html
@@ -69,12 +69,12 @@
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
           <!-- Column for margin -->
-          <div class="col-0 col-md-1">
-         </div>
+          <!-- <div class="col-0 col-md-1">
+         </div> -->
 
 
             <!-- Column for team -->
-            <div class="col-12 col-md-5">
+            <div class="col-12 col-md order-2 ml-md-5">
                 <!-- Team -->
                 <div class="project-text text-left textDIV">
                     <h5>Principal investigator</h5>
@@ -121,11 +121,11 @@
                     </p>
                 </div>
             </div>
-
             <!-- Column for GIF -->
-            <div class="col-12 col-md-5 avatarGIF">
+            <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
              <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'">
            </div>
+
         </div>
 
 
