--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@
 <div class="container-fluid">
   <div class="row align-items-start no-gutters mb-4 mb-lg-5">
       <!-- Column for text -->
-      <div class="col-12 col-md">
+      <div class="col-12 col-md order-2">
           <div class="project-text pb-1 w-100 my-auto text-left textDIV">
             <div class="collapseTransform">
               <h4>Sign Language Translation in a Healthcare Setting</h4>
@@ -183,7 +183,7 @@
       </div>
 
       <!-- Column for GIF -->
-      <div class="col-12 col-md-5 avatarGIF">
+      <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
         <img src="htmlvideos/publications.gif" class="img-fluid" alt="Avatar signing 'YOU MORE READ WANT?'">
       </div>
     </div>
