--- a/translate.html
+++ b/translate.html
@@ -67,7 +67,7 @@
         <!-- Challenge Row-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for info -->
-            <div class="col-12 col-md">
+            <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
                     <h5>Text-to-sign translation using animated avatars</h5>
                     <p class="mb-4">
@@ -94,7 +94,7 @@
             </div>
 
             <!-- Column for GIF -->
-            <div class="col-12 col-md-5 avatarGIF">
+            <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
               <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'">
             </div>
           </div>
