--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>Sign Language Translation COVID-19</title>
+<title>SignLab Amsterdam</title>
 
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta http-equiv="Access-Control-Allow-Methods" content="GET">
@@ -75,12 +75,26 @@
                   <b>Consortium:</b> SignLab Amsterdam,
                   <a href="https://www.amc.nl/web/home.htm" target="_blank">Amsterdam Medical Centre</a>,
                   <a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a> <br>
-                  <b>Year:</b> 2020 <br>
+                  <b>Years:</b> 2020-2021 <br>
  				  <b>Summary:</b>
                   In times of COVID-19, communication between healthcare professionals and deaf patients is even more challenging than it usually is. Facemasks are mandatory in many settings, making lipreading impossible, and restrictions can limit access to sign language interpreters. To help resolve this issue a tool was developed for translating questions and statements that are common in the diagnosis and treatment of COVID-19 from Dutch to Sign Language of the Netherlands. Translations are displayed by means of videos and animated avatars.
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0" />
             </div>
+
+            <div class="project-text pb-1 w-100 text-left textDIV">
+            <!-- <div class="project-text my-auto text-center text-lg-left no-top-padding"> -->
+                <h4>Questions in sign language</h4>
+                <p class="mb-4">
+                  <b>Grant type:</b> <a href="https://www.nwo.nl/en/news/33-researchers-receive-nwo-vici-grants-worth-15-million-euros" target="_blank">NWO VICI grant</a><br>
+                  <b>PI:</b> Floris Roelofsen
+                  <b>Year:</b> 2021-2026 <br>
+                <b>Summary:</b>
+                  The language barrier between deaf and hearing people hinders smooth communication and leads to social inequality and exclusion. This project investigates the form and interpretation of questions in sign languages, and applies the obtained insights to develop a translation tool to assist hearing parents of deaf children in learning sign language, as well as training sessions for sign language interpreters.
+                </p>
+                <hr class="d-none d-lg-block mb-0 ml-0" />
+            </div>
+
           </div>
 
           <!-- Column for GIF -->
