vici project added

--- a/projects.html
+++ b/projects.html
@@ -66,6 +66,21 @@
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for text -->
             <div class="col-12 col-md order-2">
+
+            <div class="project-text pb-1 w-100 text-left textDIV">
+            <!-- <div class="project-text my-auto text-center text-lg-left no-top-padding"> -->
+                <h4>Questions in sign language</h4>
+                <p class="mb-4">
+                  <b>Grant type:</b> <a href="https://www.nwo.nl/en/news/33-researchers-receive-nwo-vici-grants-worth-15-million-euros" target="_blank">NWO VICI grant</a><br>
+                  <b>PI:</b> Floris Roelofsen <br>
+                  <b>Year:</b> 2021-2026 <br>
+                <b>Summary:</b>
+                  The language barrier between deaf and hearing people hinders smooth communication and leads to social inequality and exclusion. This project investigates the form and interpretation of questions in sign languages, and applies the obtained insights to develop a translation tool to assist hearing parents of deaf children in learning sign language, as well as training sessions for sign language interpreters.
+                </p>
+                <hr class="d-none d-lg-block mb-5 ml-0" />
+            </div>
+
+
             <div class="project-text pb-1 w-100 text-left textDIV">
             <!-- <div class="project-text my-auto text-center text-lg-left no-top-padding"> -->
                 <h4>Communication between healthcare professionals and deaf patients in times of COVID-19</h4>
@@ -82,18 +97,7 @@
                 <hr class="d-none d-lg-block mb-0 ml-0" />
             </div>
 
-            <div class="project-text pb-1 w-100 text-left textDIV">
-            <!-- <div class="project-text my-auto text-center text-lg-left no-top-padding"> -->
-                <h4>Questions in sign language</h4>
-                <p class="mb-4">
-                  <b>Grant type:</b> <a href="https://www.nwo.nl/en/news/33-researchers-receive-nwo-vici-grants-worth-15-million-euros" target="_blank">NWO VICI grant</a><br>
-                  <b>PI:</b> Floris Roelofsen
-                  <b>Year:</b> 2021-2026 <br>
-                <b>Summary:</b>
-                  The language barrier between deaf and hearing people hinders smooth communication and leads to social inequality and exclusion. This project investigates the form and interpretation of questions in sign languages, and applies the obtained insights to develop a translation tool to assist hearing parents of deaf children in learning sign language, as well as training sessions for sign language interpreters.
-                </p>
-                <hr class="d-none d-lg-block mb-0 ml-0" />
-            </div>
+            
 
           </div>
 
