renaming healthcare demo page

--- a/translate.html
+++ b/translate.html
@@ -83,7 +83,7 @@
                     </p>
                     <div class="mb-4">
                       <!-- <button type="button" class="btn btn-info" onclick="removeDisclaimer(); startPose();">Go to demo</button> -->
-                      <a class="btn btn-primary" href="translator.html" role="button">Go to demo</a>
+                      <a class="btn btn-primary" href="healthcare-demo.html" role="button">Go to demo</a>
                     </div>
                    <h5>Additional resources for healthcare professionals</h5>
                    <p>
