--- a/healthcare-demo.html
+++ b/healthcare-demo.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>SignLab Amsterdam Healthcare demo</title>
+<title>SignLab Amsterdam healthcare demo</title>
 
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta http-equiv="Access-Control-Allow-Methods" content="GET">
