--- a/healthcare-demo.html
+++ b/healthcare-demo.html
@@ -63,10 +63,10 @@
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-        <span id="avatar" class="CWASAAvatar av0" style="vertical-align:top; text-align: left;"></span>
+        <span id="avatar" class="CWASAAvatar av0" style="vertical-align:top; margin-top: 20px; text-align: left;"></span>
         <!--================================================================-->
 
-        <span style="display:inline-block; vertical-align:top; margin-left: 30px; text-align: left;">
+        <span style="display:inline-block; vertical-align:top; margin-left: 30px; margin-top: 20px; text-align: left;">
               
               <span id="selectExplain">Select your input language: </span>
               <select class="form-select" aria-label="Default select example" onchange="changeLanguage(this.value);" style="margin-bottom: 50px;">
