--- a/healthcare-demo.html
+++ b/healthcare-demo.html
@@ -57,19 +57,185 @@
 <!--================================================================-->
 
 <!-- Translate -->
+
 <section class="projects-section bg-light fadeIn" id="Translator">
+  <div id="avatarTranslator" class="container-fluid" style="width: 100%;">
+        <!-- Challenge Row-->
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+          <!-- Column for info -->
+          <div class="col-12 col-md-2">
+          </div>
+            <!-- Column for info -->
+            <div class="col-12 col-md-5">
+              <div id="alertMainTran" class="alertBox"></div>
+                <!-- CWA signing avatar panel 0 -->
+                <!--================================================================-->
+                <!-- <div class="CWASAPanel av0" align="center" ></div> -->
+                <span id="avatar" class="CWASAAvatar av0" style="margin-top: 20px;"></span>
+                <!--================================================================-->
+            </div>
+
+            <!-- Column for input -->
+            <div class="col-12 col-md">
+              <div class="pb-1 w-100 my-auto text-left no-top-padding textDIV">
+              <!-- <span style="display:inline-block; vertical-align:top; margin-top: 20px; text-align: left;"> -->
+
+
+                    <div class="mb-3 row align-items-start no-gutters">
+                      <label id="selectExplain" for="inputLanguageForm" class="col-sm col-form-label">Text replaced by javascript based on current input language</label>
+                      <div class="col-sm">
+                        <select id="inputLanguageForm" class="form-select" aria-label="Default select example" onchange="changeLanguage(this.value);" style="margin-bottom: 0px; max-width: 200px;">
+                          <option  selected value="English">English</option>
+                          <option value="Nederlands">Nederlands</option>
+                        </select>
+                      </div>
+                      <div class="col-sm-4"></div>
+                    </div>
+
+
+                    <!-- This button exists so that the ZonMw scripts know that the avatar option is active -->
+                    <input type="radio" id="avatarDisplay" name="display" value="demo" class="undisplayed" checked>
+
+                    <form autocomplete="off">
+                      <div id="autocomp" class="autocomplete" style="max-width:400px;">
+                        <textarea id="mySiGML" class="inputBox" rows="3" placeholder="Enter a sentence or keywords here" onkeydown="if(event.keyCode == 13){event.preventDefault();toSiGML(document.getElementById('mySiGML').value, 'alertMainTran');}"></textarea>
+                      </div>
+                    </form>
+
+
+
+                    <div id="minutesBox" class="varBox">
+                     <label for="minutes" style="display: inline-block;">Number of minutes:</label>
+                     <input type="number" id="minutes" name="minutes" min="1" max="59" value="1" style="display: inline-block;">
+                     <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('minutes').value > 59){alertMessage('error','Please input a number between 0 and 60','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('minutes').value);}">
+                    </div>
+
+                    <div id="hoursBox" class="varBox">
+                     <label for="hours" style="display: inline-block;">Number of hours:</label>
+                     <input type="number" id="hours" name="hours" min="1" max="72" value="1" style="display: inline-block;">
+                     <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('hours').value > 72){alertMessage('error','Please input a number between 0 and 73','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('hours').value);}">
+                    </div>
+
+                    <div id="daysBox" class="varBox">
+                     <label for="days" style="display: inline-block;">Number of days:</label>
+                     <input type="number" id="days" name="days" min="1" max="14" value="1" style="display: inline-block;">
+                     <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('days').value > 14){alertMessage('error','Please input a number between 0 and 15','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('days').value);}">
+                    </div>
+
+                    <div id="weeksBox" class="varBox">
+                     <label for="weeks" style="display: inline-block;">Number of weeks:</label>
+                     <input type="number" id="weeks" name="weeks" min="1" max="10" value="1" style="display: inline-block;">
+                     <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('weeks').value > 10){alertMessage('error','Please input a number between 0 and 11','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('weeks').value);}">
+                    </div>
+
+                    <div id="monthsBox" class="varBox">
+                     <label for="months" style="display: inline-block;">Number of months:</label>
+                     <input type="number" id="months" name="months" min="1" max="18" value="1" style="display: inline-block;">
+                     <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('months').value > 18){alertMessage('error','Please input a number between 0 and 19','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('months').value);}">
+                    </div>
+
+                    <div id="aWeekBox" class="varBox">
+                     <label for="aWeek" style="display: inline-block;">Times a week:</label>
+                     <input type="number" id="aWeek" name="aWeek" min="1" max="7" value="1" style="display: inline-block;">
+                     <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('aWeek').value > 7){alertMessage('error','Please input a number between 0 and 8','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('aWeek').value);}">
+                    </div>
+
+                    <div id="loneNumberBox" class="varBox">
+                     <label for="loneNumber" style="display: inline-block;">Number:</label>
+                     <input type="number" id="loneNumber" name="loneNumber" min="1" max="99" value="1" style="display: inline-block;">
+                     <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('aWeek').value > 99){alertMessage('error','Please input a number between 0 and 100','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('loneNumber').value);}">
+                    </div>
+
+                    <div id="dayOfTheWeekBox" class="varBox">
+                      <label for="dayOfTheWeek" style="display: inline-block;">Day of the week:</label>
+                      <select name="dayOfTheWeek" id="dayOfTheWeek">
+                        <option value="Monday">Monday</option>
+                        <option value="Tuesday">Tuesday</option>
+                        <option value="Wednesday">Wednesday</option>
+                        <option value="Thursday">Thursday</option>
+                        <option value="Friday">Friday</option>
+                        <option value="Saturday">Saturday</option>
+                        <option value="Sunday">Sunday</option>
+                      </select>
+                     <input type="submit" style="display: inline-block;" onclick="checkText(document.getElementById('mySiGML').value, document.getElementById('dayOfTheWeek').value);">
+                    </div>
+
+                    <div id="timeBox" class="md-form varBox">
+                     <input id="timeInput" type="text" class="form-control timepicker" style="width: 100px; display:inline-block;">
+                     <input type="submit" style="display: inline-block;" onclick="checkText(document.getElementById('mySiGML').value,document.getElementById('timeInput').value);">
+                    </div>
+                    <br>
+                    <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("mySiGML").value, "alertMainTran");'/>
+                    <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
+                    <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Replay" name="" onclick="playURL(document.getElementById('replayButton').name)">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <label id="speedLabel" for="speedAdj" style="display: inline-block;">Adjust speed: </label>
+                     <span id="speedAdj" class="CWASASpeed av0" style="margin-bottom:5px"></span>
+                    <br>
+                    <br>
+                    <label id="glossLabel"for="outputGloss" style="display: inline-block; margin-right: 7px">Current sign: </label>
+                    <input id="outputGloss" class="txtGloss av0" value="none" type="text">
+                    <br>
+
+              <!-- </span> -->
+              </div>
+
+              <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
+              <div class="undisplayed" style="text-align: center;">
+                    <span style="font-size: 90%;" >
+                      Sign/Frame:
+                      <input id="mySF" class="txtSF" value="0/0" type="text" />
+                      &nbsp;
+                      Gloss:
+                      <input id="myGloss" class="txtGloss" value="[none]" type="text" />
+                      &nbsp;
+                      FPS:
+                      <input id="myFPS" class="txtFPS" value="00.00" type="text" />
+                    </span>
+              </div>
+              <div style="text-align: center;">
+                  <!-- FR: I've made the following status log field invisible, if you comment it out completely the avatar doesn't work anymore -->
+                  <textarea id="myStatusLog"  class="statusLog undisplayed" rows="6">
+                  </textarea>
+              </div>
+              <br>
+
+
+              <!-- SToCA applet element panel -->
+              <!--================================================================-->
+              <div class="SToCA" tyle="text-align: center;"></div>
+              <!--================================================================-->
+
+
+
+            </div>
+
+            <!-- Column for info -->
+            <div class="col-12 col-md-1">
+            </div>
+          </div>
+    </div>
+
+</section>
+
+
+<!-- Translate -->
+<!-- <section class="projects-section bg-light fadeIn" id="Translator">
     <div id="avatarTranslator" class="container-fluid" style="width: 100%;">
-      <div id="alertMainTran" class="alertBox"></div>
+      <div id="alertMainTran" class="alertBox"></div> -->
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-        <span id="avatar" class="CWASAAvatar av0" style="vertical-align:top; margin-top: 20px; text-align: left;"></span>
+        <!-- <span id="avatar" class="CWASAAvatar av0" style="vertical-align:top; margin-top: 20px; text-align: left;"></span> -->
         <!--================================================================-->
 
-        <span style="display:inline-block; vertical-align:top; margin-left: 30px; margin-top: 20px; text-align: left;">
-              
+        <!-- <span style="display:inline-block; vertical-align:top; margin-left: 30px; margin-top: 20px; text-align: left;"> -->
 
-              <div class="mb-3 row">
+
+              <!-- <div class="mb-3 row">
                 <label id="selectExplain" for="inputLanguageForm" class="col-sm-5 col-form-label">Text replaced by javascript based on current input language</label>
                 <div class="col-sm-4">
                   <select id="inputLanguageForm" class="form-select" aria-label="Default select example" onchange="changeLanguage(this.value);" style="margin-bottom: 0px;">
@@ -77,11 +243,11 @@
                     <option value="Nederlands">Nederlands</option>
                   </select>
                 </div>
-              </div>
+              </div> -->
 
 
               <!-- This button exists so that the ZonMw scripts know that the avatar option is active -->
-              <input type="radio" id="avatarDisplay" name="display" value="demo" class="undisplayed" checked>
+              <!-- <input type="radio" id="avatarDisplay" name="display" value="demo" class="undisplayed" checked>
 
               <form autocomplete="off">
                 <div id="autocomp" class="autocomplete" style="width:400px;">
@@ -89,7 +255,7 @@
                 </div>
               </form>
 
-              
+
 
               <div id="minutesBox" class="varBox">
                <label for="minutes" style="display: inline-block;">Number of minutes:</label>
@@ -166,10 +332,10 @@
               <label id="glossLabel"for="outputGloss" style="display: inline-block; margin-right: 7px">Current sign: </label>
               <input id="outputGloss" class="txtGloss av0" value="none" type="text">
               <br>
-        </span>
+        </span> -->
 
         <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
-        <div class="undisplayed" style="text-align: center;">
+        <!-- <div class="undisplayed" style="text-align: center;">
               <span style="font-size: 90%;" >
                 Sign/Frame:
                 <input id="mySF" class="txtSF" value="0/0" type="text" />
@@ -181,22 +347,22 @@
                 <input id="myFPS" class="txtFPS" value="00.00" type="text" />
               </span>
         </div>
-        <div style="text-align: center;">
+        <div style="text-align: center;"> -->
             <!-- FR: I've made the following status log field invisible, if you comment it out completely the avatar doesn't work anymore -->
-            <textarea id="myStatusLog"  class="statusLog undisplayed" rows="6">
+            <!-- <textarea id="myStatusLog"  class="statusLog undisplayed" rows="6">
             </textarea>
         </div>
-        <br>
+        <br> -->
 
 
         <!-- SToCA applet element panel -->
         <!--================================================================-->
-        <div class="SToCA" tyle="text-align: center;"></div>
+        <!-- <div class="SToCA" tyle="text-align: center;"></div> -->
         <!--================================================================-->
-    </div>
+    <!-- </div> -->
 
 
-</section>
+<!-- </section> -->
 
 <!--================================================================-->
 
