--- a/healthcare-demo.html
+++ b/healthcare-demo.html
@@ -72,6 +72,11 @@
                 <!--================================================================-->
                 <!-- <div class="CWASAPanel av0" align="center" ></div> -->
                 <span id="avatar" class="CWASAAvatar av0" style="margin-top: 20px;"></span>
+                <div class="project-text pb-1 w-100 my-auto no-top-padding small text-center text-black-50">
+                    <p class="mb-4">
+                      Powered by the <b><a href="https://vh.cmp.uea.ac.uk/index.php/JASigning" target="_blank">JASigning avatar engine</a></b>.
+                    </p>
+                  </div>
                 <!--================================================================-->
             </div>
 
