wat comments en overbodige code verwijderd

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 <!-- script specific to main page -->
 <script language="javascript" type="text/javascript" src="js/signlab.js"></script>
 <!-- These variables are defined so that the dicts from the ZonMw project can be used -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   var sentPath;
   var vidPath;
   var varPath;
-</script>
+</script> -->
 </div>
 </body>
 </html>
