algemene website gebruikt nu een aparte demo versie van zonmw javascript

--- a/healthcare-demo.html
+++ b/healthcare-demo.html
@@ -67,7 +67,6 @@
           </div>
             <!-- Column for info -->
             <div class="col-12 col-md-5">
-              <div id="alertMainTran" class="alertBox"></div>
                 <!-- CWA signing avatar panel 0 -->
                 <!--================================================================-->
                 <!-- <div class="CWASAPanel av0" align="center" ></div> -->
@@ -83,6 +82,7 @@
             <!-- Column for input -->
             <div class="col-12 col-md">
               <div class="pb-1 w-100 my-auto text-left no-top-padding textDIV">
+              <div id="alertMainTran" class="alertBox"></div>
               <!-- <span style="display:inline-block; vertical-align:top; margin-top: 20px; text-align: left;"> -->
 
 
@@ -423,11 +423,11 @@
 <!-- script specific to main page -->
 <script language="javascript" type="text/javascript" src="js/signlab.js"></script>
 <!-- These variables are defined so that the dicts from the ZonMw project can be used -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   var sentPath;
   var vidPath;
   var varPath;
-</script>
+</script> -->
 </div>
 </body>
 </html>
