--- a/index.html
+++ b/index.html
@@ -70,21 +70,23 @@
             <!-- Column for info -->
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left textDIV">
-                    <h5>Sign language: Linguistic structure made visible</h5>
+                    <h5>Sign language linguistics</h5>
                     <p class="mb-4">
                       Investigating sign languages has the potential to yield important linguistic insights which are much more difficult to obtain by investigating spoken languages alone, because linguistic structures are sometimes much easier to detect in sign languages than in spoken languages. Quite literally, sign languages often make linguistic structure <b><a href="https://doi.org/10.1515/tl-2018-0012" target="_blank">directly visible</a></b>.
                     </p>
+                    <p class="mb-4">
+                      We investigate the structure of signs and signed sentences, paying special attention to cross-modal and intra-modal variation and similarities. That is, sign language structures are not only compared to structures identified for spoken languages, but sign languages are also compared to each other, in an effort to determine in how far the modality of signal transmission impacts grammatical structures.
+                    </p>
                     <h5>Breaking language barriers</h5>
                     <p class="mb-4">
-                      Not only can science benefit from investigating sign languages; it also has an important role to play in diminishing the
-                      <b><a href="https://beeldverhalen.npofocus.nl/waarom-is-gebarentaal-nodig/?fbclid=IwAR3_XDN8TnlzN_WZ1l-jfN9rYIXkH_XmyOyNSgVzBREox3cxArkTL-k2G2I" target="_blank">language barrier</a></b> between deaf and hearing people. Deeper insights into the grammar of sign languages are essential in training sign language interpreters and to lay a  foundation for sign language machine translation.
+                      Scientific investigation of sign languages is not only necessary to obtain a general understanding of human languages, but also to diminish the
+                      <b><a href="https://beeldverhalen.npofocus.nl/waarom-is-gebarentaal-nodig/?fbclid=IwAR3_XDN8TnlzN_WZ1l-jfN9rYIXkH_XmyOyNSgVzBREox3cxArkTL-k2G2I" target="_blank">communication barrier</a></b> between deaf and hearing people. Deeper insights into the grammar of sign languages are essential in training sign language interpreters, to develop efficient curricula for sign language learners including hearing parents of deaf children, and to lay a foundation for sign language technology.
                     </p>
-                    <h5>What we do</h5>
                     <p class="mb-4">
-                      We are pursuing deeper insights into sign language grammar, and we are using these insights to develop machine translation tools that can translate sentences from Dutch into Sign Language of the Netherlands (NGT), displayed by means of an animated avatar. We are currently developing a
+                      We are currently developing a 
 						          <b><a href="covid19/index.html" target="_blank">
-                        tool to improve communication between health care professionals and deaf patients in times of COVID-19</a></b>.
-                      In the future, we intend to develop several other applications, for instance to translate announcements at train stations and airports, or to support hearing parents of deaf children in learning sign language.
+                        machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19</a></b>.
+                      In the future, we intend to develop several other applications, for instance to translate announcements at train stations and airports, and to support hearing parents of deaf children in learning sign language.
                 </div>
             </div>
 
