--- a/people.html
+++ b/people.html
@@ -77,47 +77,62 @@
             <div class="col-12 col-md order-2 ml-md-5">
                 <!-- Team -->
                 <div class="project-text text-left textDIV">
-                    <h5>Principal investigator</h5>
+                    <h5>Principal investigators</h5>
+                    
                     <p class="text-black-50 mb-3">
+                      <a href="https://www.uva.nl/profiel/p/f/r.pfau/r.pfau.html" target="_blank">
+                        Roland Pfau</a>
+                      (Associate Professor)<br>
                       <a href="https://www.florisroelofsen.com/" target="_blank">
-                        Floris Roelofsen</a>,
-                      University of Amsterdam<br>
+                        Floris Roelofsen</a>
+                      (Associate Professor)<br>
                     </p>
                     <h5>
-                      Researchers
+                      Staff
                     </h5>
                     <p class="text-black-50 mb-3">
-                      Lyke Esselink, University of Amsterdam<br>
-                      Shani Mende-Gillings, University of Amsterdam<br>
+                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Lecturer Sign Linguistics)<br>
+                      <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT and Research Assistant)<br>
+                      <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD student}<br>
+                      <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD student)<br>
+                      <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD student)<br>
+                      <!-- Marloes Oomen (Postdoc)<br> -->
+                      Lyke Esselink (Researcher)<br>
+                      Shani Mende-Gillings (Researcher)<br>
                     </p>
                     <h5>
-                      Undergraduate student alumni
+                      PhD alumni
+                    </h5>
+                     <p class="text-black-50 mb-3">
+                      <a href="https://ulrikaklomp.com/" target="_blank"> Ulrika Klomp</a> (2021)<br>
+                      <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">Marloes Oomen</a> (2020)<br>
+                      <a href="https://www.hu.nl/onderzoek/onderzoekers/eveline-boers-visker" target="_blank">Eveline Boers-Visker</a> (2020)<br>
+                    </p>
+                    <h5>
+                      Undergraduate alumni
                     </h5>
                      <p class="text-black-50 mb-3">
                       Lyke Esselink (2020)<br>
                       Shani Mende-Gillings (2020)<br>
                       Judith Corsel (2020)<br>
                       Jasmijn Bleijlevens (2020)<br>
-                      Bram Smit (2019)<br>
+                      <!-- Bram Smit (2019)<br>
                       Sander Brinkhuijsen (2019)<br>
                       Steven de Weille (2019)<br>
                       Nardi Lam (2018)<br>
-                      Jetske Beks (2018)<br>
+                      Jetske Beks (2018)<br> -->
                     </p>
                     <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
                     <h5>
-                      Collaborators and advisors
+                      Collaborators
                     </h5>
                     <p class="text-black-50 mb-3">
-                      Beppie van den Bogaerde, University of Amsterdam<br>
                       Onno Crasborn, University of Nijmegen<br>
                       <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/membrestim/david/" target="_blank">Bastien David</a>,
                         University of Geneva<br>
-                      Roland Pfau, University of Amsterdam<br>
                       <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a>, University of East Anglia<br>
-                      Marijke Scheffener, University of Amsterdam<br>
-                      Anika Smeijers, Amsterdam University Medical Centre<br>
-                      Martine en Roos Wattel, <a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a><br>
+                      <a href="https://zorgbeter.info/" target="_blank"> Anika Smeijers</a>, Amsterdam University Medical Centre<br>
+                      Roos Wattel, <a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a><br>
                     </p>
                 </div>
             </div>
