--- a/nav.html
+++ b/nav.html
@@ -11,7 +11,8 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto" role="tablist">
                 <li class="nav-item"><a class="nav-link active" href="index.html" id="AboutNav">Welcome</a></li>
-                <li class="nav-item"><a class="nav-link" href="translate.html" id="TranslateNav">Avatar Translation</a></li>
+                <li class="nav-item"><a class="nav-link" href="grammar.html">SL Grammar</a></li>
+                <li class="nav-item"><a class="nav-link" href="translate.html" id="TranslateNav">SL Technology</a></li>
                 <li class="nav-item"><a class="nav-link" href="people.html" id="PeopleNav">People</a></li>
                 <li class="nav-item"><a class="nav-link" href="publications.html" id="PublicationsNav">Publications</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="funding.html">Funding</a></li> -->
