--- a/people.html
+++ b/people.html
@@ -91,14 +91,16 @@
                       Staff
                     </h5>
                     <p class="text-black-50 mb-3">
-                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Lecturer Sign Linguistics)<br>
-                      <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT and Research Assistant)<br>
+                      <a href="https://www.uva.nl/profiel/a/b/e.o.aboh/e.o.aboh.html" target="_blank"> Enoch Aboh</a> (Professor Language Learnability)<br>
                       <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD student}<br>
+                      Lyke Esselink (Researcher)<br>
                       <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD student)<br>
                       <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD student)<br>
-                      <!-- Marloes Oomen (Postdoc)<br> -->
-                      Lyke Esselink (Researcher)<br>
                       Shani Mende-Gillings (Researcher)<br>
+                      <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT and Research Assistant)<br>
+                      <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
+                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Lecturer Sign Linguistics)<br>
+                      <!-- Marloes Oomen (Postdoc)<br> -->
                     </p>
                     <h5>
                       PhD alumni
