--- a/people.html
+++ b/people.html
@@ -79,8 +79,9 @@
                 <div class="project-text text-left textDIV">
                     
                     <p class="text-black-50 mb-3">
-                      SignLab Amsterdam is a cross-faculty research lab at the University of Amsterdam founded in 2021.
+                      SignLab Amsterdam is a cross-faculty research lab at the University of Amsterdam.
                       It brings together researchers in linguistics and AI who share an interest in sign language research.
+                      The lab was founded in 2020 but builds on a long tradition of sign language research in Amsterdam.
                     </p>
 
                     <h5>Principal investigators</h5>
