--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
             <!-- Column for info -->
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left textDIV">
+
+                    <p class="mb-6">
+                      SignLab Amsterdam is a cross-faculty research lab at the University of Amsterdam, founded in 2020.
+                      It brings together a long tradition of sign linguistics in Amsterdam, starting with the pioneering work of 
+                      <a href="https://nl.wikipedia.org/wiki/Bernard_Tervoort" target="_blank">Bernard Tervoort</a> in the 1950's,
+                      with recent advances in artificial intelligence.
+                    </p>
+
                     <h5>Sign language linguistics</h5>
                     <p class="mb-4">
                       Investigating sign languages has the potential to yield important linguistic insights which are more difficult to obtain by investigating spoken languages alone, because linguistic structures are sometimes easier to detect in sign languages than in spoken languages. Quite literally, sign languages often make linguistic structure <b><a href="https://doi.org/10.1515/tl-2018-0012" target="_blank">directly visible</a></b>.
@@ -87,12 +95,17 @@
 						          <b><a href="covid19/index.html" target="_blank">
                         machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19</a></b>.
                       In the future, we intend to develop several other applications, for instance to translate announcements at train stations and airports, and to support hearing parents of deaf children in learning sign language.
+                    </p>
                 </div>
             </div>
 
             <!-- Column for GIF -->
             <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
               <img src="htmlvideos/welcome.gif" class="img-fluid" alt="Avatar signing 'HELLO. THIS WEBSITE OF SIGNLAB AMSTERDAM. WELCOME'">
+
+              <!-- <p class="mb-4">
+                      Hosted by...
+                    </p> -->
             </div>
           </div>
     </div>
