--- a/onderzoek.html
+++ b/onderzoek.html
@@ -1,13 +1,9 @@
-<!doctype html>
-<html lang="en">
-<head>
-
-
-
-</head>
-
-
-<body id="page-top">
-  window.location.href = "https://uva.fra1.qualtrics.com/jfe/form/SV_b1J2UBuGpahMQHY";
-</body>
+<!DOCTYPE html>
+<html>
+   <head>
+      <meta http-equiv = "refresh" content = "0; url = https://uva.fra1.qualtrics.com/jfe/form/SV_b1J2UBuGpahMQHY" />
+   </head>
+   <body>
+      <p>Redirecting to another URL</p>
+   </body>
 </html>
