--- a/nav.html
+++ b/nav.html
@@ -15,6 +15,7 @@
                 <li class="nav-item"><a class="nav-link" href="translate.html" id="TranslateNav">SL Technology</a></li>
                 <li class="nav-item"><a class="nav-link" href="people.html" id="PeopleNav">People</a></li>
                 <li class="nav-item"><a class="nav-link" href="publications.html" id="PublicationsNav">Publications</a></li>
+                <li class="nav-item"><a class="nav-link" href="playground.html" id="PlaygroundNav">SiGML Playground</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="funding.html">Funding</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" href="tutorial.html">Tutorial</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li> -->
