update grammar page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,18 @@
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left textDIV">
 
-                    <p class="mb-6">
+                    <p class="mb-9">
+                    <a href="https://www.signlab-amsterdam.nl/onderzoek" target="_blank">
+                      <button type="button" class="btn btn-warning">
+                        We are currently looking for NGT users to participate in an online study.<br>
+                        Click
+                        here
+                        if you are interested.
+                      </button>
+                    </a>
+                    </p>
+                    
+                    <p class="mb-6 mt-6">
                       SignLab Amsterdam is a cross-faculty research lab at the University of Amsterdam, founded in 2020.
                       It brings together a long tradition of sign linguistics in Amsterdam, starting with the pioneering work of 
                       <a href="https://nl.wikipedia.org/wiki/Bernard_Tervoort" target="_blank">Bernard Tervoort</a> in the 1950's,
