logo on homepage

--- a/grammar.html
+++ b/grammar.html
@@ -68,13 +68,14 @@
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
-          <div class="col-6 col-md order-2">
+          <!-- <div class="col-6 col-md order-2"> -->
+            <div class="col-7">
                 <div class="project-text pb-1 w-100 my-auto text-left">
 
 
                     <h3>General description</h3>
 
-                    <p class="text-black mb-3">
+                    <p class="text-black mb-3 mt-3">
                       Comparative studies on languages of different language families have revealed striking differences as well as interesting (possibly universal) similarities concerning their grammatical structure. Traditionally, however, these studies were only concerned with the comparison of grammatical phenomena across spoken languages. Once we include sign languages in the typological picture, new research questions emerge.
                     </p>
                     <p class="text-black mb-5">
@@ -117,22 +118,28 @@
                 </div>
             </div>
             <!-- Column for GIF -->
-          <div class="col-6 col-md-5 order-1 order-md-12 ml-md-5">
+          <!-- <div class="col-6 col-md-5  order-1 order-md-12 ml-md-5"> -->
+          <div class="col-5">
             <div class="project-text pb-1 w-100 my-auto text-left">
-                <br>
-                <br>
+                
 
                 <p class="mb-5">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/yFLb2I7t-JQ?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe src="https://www.youtube.com/embed/yFLb2I7t-JQ?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
                 </p>
 
                 <p class="mb-5">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/9lXGwsv1WuE?start=100&amp;rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe src="https://www.youtube.com/embed/9lXGwsv1WuE?start=100&amp;rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
                 </p>
 
               
                 <p class="mb-5">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/bwFD7zbb8UI?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe src="https://www.youtube.com/embed/bwFD7zbb8UI?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
                 </p>
             </div>
           </div>
