logo orientation fixed

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
               <img src="htmlvideos/welcome.gif" class="img-fluid" alt="Avatar signing 'HELLO. THIS WEBSITE OF SIGNLAB AMSTERDAM. WELCOME'">
 
-              <div class="embed-responsive mt-5">
-                  <img src="images/logo-uva.png" class="img-fluid" alt="University of Amsterdam">
+              <div class="mt-5">
+                  <img src="images/logo-uva.png" class="img-fluid" style="image-orientation:portrait;" alt="University of Amsterdam">
               </div>
             </div>
           </div>
