update publications and people

--- a/people.html
+++ b/people.html
@@ -90,19 +90,24 @@
                       (Associate Professor)<br>
                     </p>
                     <h5>
-                      Staff
+                      Senior staff
                     </h5>
                     <p class="text-black-50 mb-3">
                       <a href="https://www.uva.nl/profiel/a/b/e.o.aboh/e.o.aboh.html" target="_blank"> Enoch Aboh</a> (Professor Language Learnability)<br>
+                      <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT and Research Assistant)<br>
+                      <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
+                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Assistant Professor Sign Linguistics)<br>
+                      <!-- Marloes Oomen (Postdoc)<br> -->
+                    </p>
+                    <h5>
+                      PhD students and junior researchers
+                    </h5>
+                    <p class="text-black-50 mb-3">
                       <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD student}<br>
                       Lyke Esselink (Researcher)<br>
                       <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD student)<br>
                       <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD student)<br>
                       Shani Mende-Gillings (Researcher)<br>
-                      <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT and Research Assistant)<br>
-                      <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
-                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Lecturer Sign Linguistics)<br>
-                      <!-- Marloes Oomen (Postdoc)<br> -->
                     </p>
                     <h5>
                       PhD alumni
@@ -115,7 +120,11 @@
                     <h5>
                       Master and bachelor alumni
                     </h5>
-                     <p class="text-black-50 mb-3">
+                    <p class="text-black-50 mb-1">
+                      <b>2021</b>: Mark van Hofwegen (BSc AI),
+                      Matthijs van de Vijver (BSc AI),
+                      Alon Shilo (BSc AI).<br>
+                    <p class="text-black-50 mb-3">
                       <b>2020</b>: Lyke Esselink (BSc AI),
                       Shani Mende-Gillings (BSc AI),
                       Judith Corsel (BSc AI),
