--- a/publications.html
+++ b/publications.html
@@ -68,26 +68,42 @@
       <div class="col-12 col-md order-2">
           <div class="project-text pb-1 w-100 my-auto text-left textDIV">
             <div class="collapseTransform">
-              <h4>Sign Language Translation in a Healthcare Setting</h4>
+              <h4>Online Evaluation of Text-to-sign Translation by Deaf End Users: Some Methodological Recommendations</h4>
                 <p class="mb-4">
                   <b>Year:</b> 2021 <br>
-                  <b>Authors:</b> L.D. Esselink, S.E. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
-                  <b>Type:</b> Manuscript submitted for publication<br>
-                  <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="bi bi-download"></i></a>
+                  <b>Authors:</b> F. Roelofsen, L.D. Esselink, S.E. Mende-Gillings, M. de Meulder, N. Sijm, A.S. Smeijers <br>
+                  <b>Conference:</b> First International Workshop on Automatic Translation for Signed and Spoken Languages (AT4SSL) at the Machine Translation Summit<br>
+                  <a href="publications/AT4SSL-2021-signlab-paper.pdf" download="AT4SSL">Download paper <i class="bi bi-download"></i></a>
+                  <a href="publications/AT4SSL-presentation-signlab-Amsterdam.pdf" download="AT4SSL">Download presentation <i class="bi bi-download"></i></a>
                   <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
                 </p>
                 <div id="collapseOne" class="collapse">
               <p class="mb-4">
-                It is challenging for healthcare professionals to communicate with Deaf patients,
-                especially in times of COVID-19. Sign language interpreters cannot always enter hospitals and
-                clinics, and face masks make lipreading impossible.<br>
-                We present an application which allows healthcare professionals to translate sentences
-                that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign
-                Language of the Netherlands (NGT). Translations are displayed by means of videos and
-                avatar animations. The architecture of the system is such that it could be straightforwardly
-                extended to other sign languages. We gratefully acknowledge funding from the Netherlands
-                Organisation for Innovation in Healthcare (ZonMw) through the
-          <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
+                We present a number of methodological recommendations concerning the online evaluation of avatars for text-to-sign translation, 
+                focusing on the structure, format and length of the question- naire, as well as methods for eliciting and faithfully transcribing responses.
+              </p>
+              </div>
+            </div>
+            <hr class="d-none d-lg-block mb-0 ml-0"/>
+          </div>
+          <div class="project-text pb-1 w-100 my-auto text-left publicationDIV">
+            <div class="collapseTransform">
+              <h4>Sign Language Translation in a Healthcare Setting</h4>
+                <p class="mb-4">
+                  <b>Year:</b> 2021 <br>
+                  <b>Authors:</b> L.D. Esselink, S.E. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
+                  <b>Conference:</b> Translation and Interpreting Technology Online (TRITON)<br>
+                  <a href="publications/TRITON-2021-signlab-Amsterdam.pdf" download="TRITON">Download paper <i class="bi bi-download"></i></a>
+                  <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
+                </p>
+                <div id="collapseOne" class="collapse">
+              <p class="mb-4">
+                Communication between healthcare professionals and deaf patients is challenging, and the current COVID-19 pandemic makes
+                 this issue even more acute. Sign language interpreters can often not enter hospitals and face masks make lipreading impossible. 
+                 To address this urgent problem, we developed a system which allows healthcare professionals to translate sentences that are 
+                 frequently used in the diagnosis and treatment of COVID-19 into Sign Language of the Netherlands (NGT). Translations are displayed
+                  by means of videos and avatar animations. The architecture of the system is such that it could be extended to other applications 
+                  and other sign languages in a relatively straightforward way.
               </p>
               </div>
             </div>
